<resources>
    <string name="app_name">Stronghold</string>
    <string name="action_download">Download Events</string>
    <string name="action_upload">Upload Scouting</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="downloading_data">Downloading data</string>
    <string name="uploading_data">Uploading data</string>
    <string name="please_wait_while_data_downloads">Please wait while data downloads…</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="select_event">Select Event</string>
    <string name="select_match">Select Match</string>
    <string name="select_team">Select Team</string>
    <string name="scouter_name">Scouter Name</string>
    <string name="select_mode">Select Mode</string>
    <string name="begin_scouting">Begin Scouting ></string>
    <string name="begin_benchmarking">Begin Benchmarking ></string>
    <string name="view_data">View Data ></string>
    <string name="title_activity_scouting_team_select">ScoutingTeamSelect</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
   <string name="auto">Auto</string>
    <string name="tele">Tele</string>
    <string name="general">General</string>
    <string name="match_scouting">Scout Matches</string>
    <string name="benchmarking">Benchmark</string>
    <string name="data">Data View</string>
    <string-array name="defense_positions">
        <item>Not Present</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="ending_positions">
        <item>unknown</item>
        <item>neutral</item>
        <item>courtyard</item>
    </string-array>
    <string-array name="endgamescale_choices">
        <item>no attempt</item>
        <item>challenged</item>
        <item>challenged (scale attempt)</item>
        <item>scaled</item>
        <item>failed challenge</item>
        <item>failed scale, no challenge</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_data">ViewData</string>
</resources>
