<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main_menu" tools:context=".MainMenu">

    <EditText
        android:id="@+id/nameScouter"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapSentences|textMultiLine|textAutoCorrect"
        android:hint="Enter your name"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menu"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_event"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Spinner
        android:id="@+id/eventPicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginLeft="@dimen/horiz_margin"
        android:layout_marginRight="@dimen/horiz_margin" />
    <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:layout_height="@dimen/radio_height"
            android:text="@string/match_scouting"
            android:onClick="setScoutType"
            android:id="@+id/matchScouting"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/radio_height"
            android:button="@android:drawable/btn_radio"
            android:text="@string/benchmarking"
            android:onClick="setScoutType"
            android:id="@+id/benchmarking"/>

    </RadioGroup>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/matchScoutLayout"
        android:orientation="vertical">

        <!--default visibility should be invisible in case benchmarking is chosen -->
        <TextView
            android:id="@+id/selectMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horiz_margin"
            android:layout_marginRight="@dimen/horiz_margin"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/select_match"
            android:textSize="@dimen/text_size" />

        <!--default visibility should be invisible in case benchmarking is chosen -->
        <Spinner
            android:id="@+id/matchPicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginLeft="@dimen/horiz_margin"
            android:layout_marginRight="@dimen/horiz_margin" />

        <TextView
            android:id="@+id/selectAlliance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horiz_margin"
            android:layout_marginRight="@dimen/horiz_margin"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/select_team"
            android:textSize="@dimen/text_size" />

        <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginRight="@dimen/horiz_margin"
            android:layout_marginLeft="@dimen/horiz_margin"
            android:id="@+id/alliancePicker"
            />


    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/teamScoutLayout">
        <TextView android:id="@+id/selectTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horiz_margin"
            android:layout_marginRight="@dimen/horiz_margin"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/select_team"
            android:textSize="@dimen/text_size" />
        <Spinner android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:id="@+id/teamPicker"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginLeft="@dimen/horiz_margin"
            android:layout_marginRight="@dimen/horiz_margin"/>

    </LinearLayout>

    <Button android:id="@+id/begin_scouting"
        android:visibility="gone"
        android:text="@string/begin_scouting"
        android:layout_height="@dimen/button_height"
        android:layout_width="fill_parent"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@android:drawable/btn_default"
        android:enabled="true"
        android:focusable="false"
        android:nestedScrollingEnabled="false"
        android:singleLine="false"
        android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
