<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sparx1126.scoutingapp2016.MatchScouting"
    tools:showIn="@layout/activity_scouting_team_select">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout android:id="@+id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button android:id="@+id/auto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:onClick="switchFragment"
            android:text="@string/auto" />
        <Button android:id="@+id/tele"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:onClick="switchFragment"
            android:text="@string/tele" />
        <Button android:id="@+id/general"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:onClick="switchFragment"
            android:text="@string/general" />
    </LinearLayout>
    <LinearLayout android:id="@+id/fragContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Match was scouted: "
                android:textSize="@dimen/text_size" />

            <CheckBox
                android:id="@+id/matchScouted"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:checked="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
